--- a/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/light_gray_bkgrd"
+    android:layerType="hardware"
     android:orientation="vertical" >
-    
+
     <FrameLayout
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="0dp" 
-        android:layout_weight="1"/>
-    
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
