--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/light_gray_bkgrd" >
-
+    android:layout_height="match_parent" >
 
     <FrameLayout
         android:id="@+id/discover_map"
@@ -11,15 +9,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true" />
 
     <FrameLayout
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
-        android:layout_below="@+id/full_search_bar"/>
-
+        android:layout_below="@+id/full_search_bar" />
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
@@ -28,21 +25,22 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true" />
 
- 	<com.discover.mobile.common.help.HelpWidget
+    <com.discover.mobile.common.help.HelpWidget
         android:id="@+id/help"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" /> 
-    
- 	 <!-- Layout Displays Google's Terms of Use -->
-	<include layout="@layout/google_terms_of_use_layout" />
-	
+        android:layout_height="wrap_content" />
+
+    <!-- Layout Displays Google's Terms of Use -->
+
+    <include layout="@layout/google_terms_of_use_layout" />
+
     <ImageView
         android:id="@+id/drop_shadow"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_above="@+id/map_navigation_panel"
         android:background="@drawable/atm_search_dropshadow" />
-     
+
     <LinearLayout
         android:id="@+id/map_navigation_panel"
         android:layout_width="match_parent"
