--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/light_gray_bkgrd" >
+    android:layout_height="match_parent" >
 
     <FrameLayout
         android:id="@+id/discover_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/full_search_bar"
         android:layout_above="@+id/drop_shadow"
-        android:layout_alignParentBottom="true" 
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/full_search_bar" />
 
     <FrameLayout
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
-        android:layout_below="@+id/full_search_bar"/>
+        android:layout_below="@+id/full_search_bar" />
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
@@ -33,8 +32,9 @@
         android:layout_height="wrap_content" />
 
     <!-- Layout Displays Google's Terms of Use -->
-	<include layout="@layout/google_terms_of_use_layout" />
-    
+
+    <include layout="@layout/google_terms_of_use_layout" />
+
     <ImageView
         android:id="@+id/drop_shadow"
         android:layout_width="match_parent"
