--- a/Discover-Bank-Phone/res/layout/bank_message_fragment_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_message_fragment_layout.xml
@@ -4,8 +4,7 @@
         android:layout_height="wrap_content"
         android:fillViewport="true"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-       	android:background="@drawable/light_gray_bkgrd" >
+        android:focusableInTouchMode="true">
        	
 		<RelativeLayout 
 		    android:layout_width="match_parent"
