--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -3,8 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@drawable/light_gray_bkgrd" >
+    android:focusableInTouchMode="true" >
 
 
     <com.discover.mobile.bank.ui.widgets.BankHeaderProgressIndicator
