--- a/Discover-Bank-Phone/res/layout/bank_privacy_terms_activity_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_privacy_terms_activity_layout.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/light_gray_bkgrd"
+    android:layerType="hardware"
     android:orientation="vertical" >
-    
+
     <FrameLayout
         android:id="@+id/navigation_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-        
+        android:layout_height="match_parent" />
+
 </LinearLayout>
