--- a/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
@@ -8,29 +8,28 @@
     <RelativeLayout
         android:id="@+id/terms_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/light_gray_bkgrd" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:id="@+id/terms_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/status_bar_height"
             android:background="@drawable/rounded_table_corners_no_padding"
             android:orientation="vertical"
-            android:padding="1dp"
-            android:layout_marginLeft="@dimen/forms_inner_padding" 
-	    	android:layout_marginRight="@dimen/forms_inner_padding" >
+            android:padding="1dp" >
         </LinearLayout>
 
         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
             android:id="@+id/bank_footer"
+            style="@style/bank_layout_footer_style"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/terms_list" 
-            style="@style/bank_layout_footer_style"
-            custom:footerType="2"
-            android:visibility="gone"/>
+            android:layout_below="@+id/terms_list"
+            android:visibility="gone"
+            custom:footerType="2" />
     </RelativeLayout>
 
 </ScrollView>
