--- a/Discover-Bank-Phone/res/layout/faq_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/faq_list_item.xml
@@ -2,46 +2,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
-    
-	<View
-	    android:id="@+id/divider"
-        android:layout_width="fill_parent"
-		android:layout_height="2dp"
-        android:background="@drawable/table_dotted_line" 
-        android:layout_marginBottom="@dimen/between_related_elements_padding"/>
-	<RelativeLayout
-	     android:layout_width="match_parent"
-    android:layout_height="wrap_content" 
-    android:padding="@dimen/between_related_elements_padding"
-	    >
-    <TextView
-        android:id="@+id/expand_indicator"
-        android:layout_below="@+id/divider"
-        android:gravity="center_horizontal|center_vertical"
-        android:layout_width="@dimen/groups_of_elements_padding"
-        android:layout_height="wrap_content"
-        style="@style/blue_hyperlink"
-        android:text="@string/plus" />
 
-    <TextView
-        android:id="@+id/faq_section_title"
+    <View
+        android:id="@+id/divider"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/expand_indicator"
-        android:layout_alignTop="@+id/expand_indicator"
-        style="@style/body_copy"
-        android:textStyle="bold"
-        android:text="@string/edit" />
+        android:layout_height="2dp"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
+        android:background="@drawable/table_dotted_line" />
 
-    <TextView
-        android:id="@+id/faq_section_detail"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/sub_copy_medium"
-        android:layout_alignLeft="@+id/faq_section_title"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
-        android:layout_below="@+id/faq_section_title"
-        android:text="@string/edit" 
-        android:visibility="gone"/>
-</RelativeLayout>
+        android:layout_below="@+id/divider" >
+
+        <TextView
+            android:id="@+id/expand_indicator"
+            style="@style/blue_hyperlink"
+            android:layout_width="@dimen/groups_of_elements_padding"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/plus" />
+
+        <TextView
+            android:id="@+id/faq_section_title"
+            style="@style/body_copy"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/expand_indicator"
+            android:layout_toRightOf="@+id/expand_indicator"
+            android:text="@string/edit"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/faq_section_detail"
+            style="@style/sub_copy_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/faq_section_title"
+            android:layout_below="@+id/faq_section_title"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:text="@string/edit"
+            android:visibility="gone" />
+    </RelativeLayout>
+
 </RelativeLayout>
