--- a/Discover-Card-Phone/res/values/color.xml
+++ b/Discover-Card-Phone/res/values/color.xml
@@ -79,5 +79,14 @@
     <!-- fastcheck -->
     <color name="transparentGray">#50000000</color>
 	
+    <color name="title_selector_color">#FD6C04</color>
+   <color name="title_selector_text_color">#FFFFFF</color>
+   <color name="line_separator">#DCDCDC</color>
     
+   <!-- whats new -->
+	<color name="default_circle_indicator_fill_color">#6E6E6E</color>
+    <color name="default_circle_indicator_page_color">#00000000</color>
+    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>
+    <color name="grey_background_color">#FAF7F8</color>
+    <color name="bottom_line">#cc5200</color>
 </resources>
