--- a/Discover-Card-Phone/res/values/strings_url.xml
+++ b/Discover-Card-Phone/res/values/strings_url.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="base_url_dev">https://asys.mapi.discovercard.com</string>
-    <string name="base_url_dev1">https://asys.mapi.discovercard.com</string>
-    <string name="url_in_use">https://asys.mapi.discovercard.com</string>
+
+    <string name="base_url_dev">https://mst0.m.discovercard.com</string>
+    <string name="base_url_dev1">https://mst0.m.discovercard.com</string>
+    <string name="url_in_use">https://mst0.m.discovercard.com</string>
 
     
     <string name="discover_url">/cardsvcs/acs/</string>
@@ -16,7 +17,7 @@
     <string name="strongAuth_url">reg/v1/user/sa/check</string>
     <string name="strongAuth_quest_url">strongauth/v1/challenge</string>
     <string name="strongAuth_ans_url">strongauth/v1/authenticate</string>
-    <string name="share_url">https://secure.opinionlab.com/ccc01/o.asp?id=OJMQyJQI&amp;referer=https://mobileapp.discover.com/</string>
+    <string name="share_url">https://secure.opinionlab.com/ccc01/o.asp?id=OWPeJUwo&amp;referer=https://mobileapp.discover.com/</string>
     <string name="xApplicationVersion">5.0.0</string>
     <!-- Bank SSO Login  -->
     <string name="sso_authenticate_url">acct/v1/tokensignin</string>
@@ -29,4 +30,9 @@
 	
 	<!-- fastcheck -->
 	<string name="fastcheck_url">quickview/v1/view</string>
+	
+	 <!-- Quick View -->
+    <string name ="get_quick_view_status">personalprofile/v1/quickviewbinding/status</string>
+    <string name ="quick_view">personalprofile/v1/quickviewbinding</string>
+    <string name ="quick_view_unbind">_method=DELETE</string>
 </resources>
