US7225 - 13.3 code merging from card 6/5 - Card code from clear case

--- a/Discover-Card-Phone/res/layout/quick_view_settings.xml
+++ b/Discover-Card-Phone/res/layout/quick_view_settings.xml
@@ -11,7 +11,7 @@
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="0.1"
+        android:layout_weight="0.2"
         android:fillViewport="true" >
 
         <RelativeLayout
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/quick_view_faq"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/quickviewsetup" />
+                    android:background="@drawable/quickviewsetup" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -114,9 +114,8 @@
         android:id="@+id/footer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
-        android:layout_weight="0.9"
+        android:layout_weight="0.8"
         android:gravity="bottom"
         android:overScrollMode="never" >
 
